--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitflyer-client",
+  "name": "@tadko/bitflyer-client",
   "version": "0.0.1",
   "description": "A Client for BitFlyer API",
   "main": "dist/index.js",
