--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.1",
     "@types/lodash": "^4.14.93",
+    "@types/mocha": "^2.2.46",
+    "@types/nock": "^9.1.2",
     "@types/node": "^9.3.0",
     "@types/request": "^2.0.13",
     "@types/request-promise-native": "^1.0.11",
     "awesome-typescript-loader": "^3.4.1",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
+    "nock": "^9.1.6",
+    "ts-node": "^4.1.0",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0"
   },
   "scripts": {
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "repository": {
     "type": "git",
